--- a/.tmux.conf
+++ b/.tmux.conf
@@ -115,5 +115,8 @@ bind -t vi-copy 'y' copy-selection
 bind C-c run "tmux save-buffer - | xclip -i -sel clipboard"
 bind C-v run "tmux set-buffer \"$(xclip -o -sel clipboard)\"; tmux paste-buffer"
 
+set -g default-command /bin/zsh
+set -g default-shell /bin/zsh
 
-
+# Use powerline
+source "/home/dave/powerline/powerline/bindings/tmux/powerline.conf"
